--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
 
               <div id="pfp">
                 <div id="pfpimg">
-                  <img src="list-of-properties/Ellipse 4.png" />
+                  <img src="images/Ellipse 4 (1).png" />
                 </div>
                 <h5>
                   <span class="pfp">Harry William</span><br />Property Owner
@@ -368,7 +368,7 @@
 
             <div class="paragraph right">
               <img
-                src="list-of-properties/media bg-cover.png"
+                src="images/filter (1).png"
                 alt="img"
                 style="height: 590px"
               />
